--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "firebase": "^8.5.0",
     "md5": "^2.3.0",
     "nodemon": "^2.0.7"
   },
